# o-Antiquario

./: .gitattributes  .gitignore  README.md  curate-20-perfumes.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
apps/web/: index.html  vite.config.ts
data/: sources.yml
data/catalog/: README.md  catalog-manifest.json
data/curation/: curation-queue.json
data/raw/: README.md
data/releases/: latest.json  recommendation-catalog.json
data/staging/: README.md
data/taxonomy/: source-aliases.yml  taxonomy.yml
docs/: Assistente Olfativo Inteligente Com IA.md  Bases De Dados De Perfumaria.md  CATALOGO_WEB.md  CONHECIMENTO_RAG.md  CURADORIA_EDITORIAL.md  DIRECAO_VISUAL.md  ESCOPO.md  FONTES_E_LICENCAS.md  IMPLEMENTACAO.md  PLATAFORMA_DADOS.md  ROADMAP.md  TAXONOMIA.md
docs/adr/: 0001-knowledge-core-separado-do-cerberus.md
knowledge/compiled/: chunks.json  documents.json  graph-health.json  graph.json  knowledge-manifest.json
knowledge/templates/: Nota-Olfativa.md  Perfume.md
knowledge/vault/: Antiquario-Index.md
pipeline/antiquario_data/: __init__.py  auto_approve.py  catalog_release.py  cli.py  curation_queue.py  fill_missing_notes.py  gemini_enrich.py  io_utils.py  models.py  official_pdf.py  parfumo.py  term_resolver.py  vtex_enrichment.py  warehouse.py  wikidata.py
pipeline/tests/: test_catalog_release.py  test_curation_queue.py  test_official_pdf.py  test_term_resolver.py  test_warehouse.py  test_wikidata.py
scripts/: find_disconnected.py  run-python.mjs
src/catalog/: build-recommendation.ts  knowledge-adapter.ts  release.ts  (+3 more)
(+1016 files in other folders)
