[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "o-antiquario-data"
version = "0.1.0"
description = "Pipeline local e auditável de dados do Antiquário"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.4,<2",
]

[tool.setuptools]
package-dir = {"" = "pipeline"}

[tool.setuptools.packages.find]
where = ["pipeline"]
include = ["antiquario_data*"]
